welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:28: error: too many arguments for method flower: (c: java.awt.Color)Unit
	flower(Color,GREEN);
              ^FlowerPot:29: error: too many arguments for method flower: (c: java.awt.Color)Unit
	flower(Color, PINK);
              ^